Fix indie space banner border spacing

--- a/htdocs/content/themes/tgdf/assets/sass/layouts/_indie_space.scss
+++ b/htdocs/content/themes/tgdf/assets/sass/layouts/_indie_space.scss
@@ -14,6 +14,7 @@
   }
 
   @media screen and (max-width: 736px) {
+    margin-bottom: -6.05em;
   }
 }
 
